--- a/modules/flowable-ui-admin/flowable-ui-admin-app/src/main/resources/static/styles/bootstrap-theme.css
+++ b/modules/flowable-ui-admin/flowable-ui-admin-app/src/main/resources/static/styles/bootstrap-theme.css
@@ -3,7 +3,9 @@
  * Copyright 2011-2014 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+.test{
+  background-color: white;
+}
 .btn-default,
 .btn-primary,
 .btn-success,
